@@ -30,7 +30,7 @@ Previously deprecated features (to be removed in future):
 LibSoX interface changes:
 
   o Added new variants of sox_open to allow read/write from/to memory
-    buffers (in POSIX 200x environment); see example5.c  (robs)
+    buffers (in POSIX 2008 environment); see example5.c  (robs)
 
 File formats:
 
@@ -67,7 +67,8 @@ Other bug fixes:
 
 Internal improvements:
 
-  None.
+  o Move bit-rot detection support files to sub-directory (had
+    been causing some build problems).  (robs)
 
 
 sox-14.3.0	2009-06-14
